--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/Properties/ru-RU.Resources.resx
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/Properties/ru-RU.Resources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Error_EntityWithIdNotFound" xml:space="preserve">
-    <value>{entityname} с идентификатором id = {id} не найден</value>
+  <data name="ERROR_EntitiWithIdNotFound" xml:space="preserve">
+    <value>{entityname} с идентификатором {id} не найден</value>
   </data>
 </root>
